# SceneExchangeContracts

./: README.md  pyproject.toml
src/scene_exchange_contracts/: __init__.py  conformance.py  validation.py
src/scene_exchange_contracts/schemas/: actor_binding_set.v1.schema.json  closed_loop_scene_package.v1.schema.json  cosmos_transfer_job.v1.schema.json  nurec_multimodal_evidence.v1.schema.json  nurec_multimodal_frame.v1.schema.json  nurec_runtime_track_inventory.v1.schema.json  reconstruction_package.v1.schema.json  runtime_alignment_evidence.v1.schema.json  scenario_feedback.v1.schema.json  scenario_ir.v1.schema.json
src/scene_exchange_contracts/schemas/shared_exchange_protocol/: evaluation_run_request.schema.json  evaluation_run_result.schema.json  reconstruction_request.schema.json  reconstruction_result.schema.json  scene_selection_request.schema.json  shared_artifact_ref.schema.json  shared_envelope.schema.json  shared_job_claim.schema.json  shared_job_request.schema.json  shared_job_result.schema.json
tests/: test_conformance.py
