[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scene-exchange-contracts"
version = "1.0.0"
description = "Canonical contracts shared by TriggerEngine, NeuralSceneBridge, and ClosedLoopBench"
requires-python = ">=3.10"

[tool.setuptools.package-data]
scene_exchange_contracts = ["schemas/*.json", "schemas/shared_exchange_protocol/*.json"]
